# ayaka-hand

./: .env.example  .gitattributes  .gitignore  README.md  index.html
assets/: index-4dK7jz9C.css  index-BKoecILE.js  index-CN0gDQVE.js  index-CP-w3EeE.js  index-CcPNS8oJ.css  index-DK_uoeT9.css  index-DQkbJhOg.js  index-arMIvMwc.js
data/ayaka-crops/: labels-pilot-v1.0.jsonl  labels-val2017-backup.jsonl  manifest-train2017.jsonl  manifest-val2017.jsonl
docs/benchmarks/: distill-before-after.md
docs/data/: DATASET.md
factory/: pyproject.toml
factory/distill/: pyproject.toml
factory/distill/distill/: build_dataset.py  data.py  evaluate.py  export_onnx.py  metrics.py  model.py  schema.py  train.py
factory/distill/tests/: conftest.py  test_build_dataset.py  test_data.py  test_evaluate.py  test_export_onnx.py  test_metrics.py  test_model.py  test_train_smoke.py
factory/labeling/: batch_label.py  cache_build.py  harvest_coco.py
factory/probe/: amd_rocm_probe.py  cortex_call.py  day1_probe.py
factory/schema/: grasp_schema_v1.json
factory/serve/: README.md  classes.txt  prewarm.py  pyproject.toml  server.py
models/rtdetr/: README.md
models/student/: README.md
web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web/public/: capture.html
web/public/models/hand/: ayaka-hand.glb
web/public/replay/: synthetic-emg.json
web/scripts/: fetch-detector.sh  fetch-student.sh  gen-emg.ts  smoke-detector.mjs  smoke-student.mjs  telemetry-server.py
web/scripts/blender/: hand_build.py
web/src/: config.test.ts  config.ts  main.ts  remote.ts  style.css  telemetry.ts  types.ts
web/src/control/: fsm.test.ts  fsm.ts  gating.test.ts  gating.ts
web/src/eval/: logger.test.ts  logger.ts
web/src/hand/: presets.test.ts  presets.ts  threeHand.ts
web/src/perception/: detectRemote.test.ts  detectRemote.ts  detector.ts  letterbox.test.ts  letterbox.ts  lookup.test.ts  lookup.ts  ortEnv.ts  pipeline.test.ts  pipeline.ts  ranking.test.ts  ranking.ts  student.ts  studentGeom.test.ts  studentGeom.ts  voting.test.ts  voting.ts
web/src/trigger/: onset.test.ts  onset.ts  replay.test.ts  replay.ts
web/src/ui/: hud.test.ts  hud.ts  manualMode.test.ts  manualMode.ts  overlay.ts  qrShare.test.ts  qrShare.ts  stripchart.ts
(+2 files in other folders)
