[project]
name = "ayaka-distill"
version = "0.1.0"
description = "Teacher->student distillation: VLM grasp labels -> MobileNetV2 dual-head edge CNN (arch selectable, winner: timm mnv2_100)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7,<2.13",
    "torchvision>=0.22,<0.28",
    "pillow>=11.0",
    "numpy<2.3",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "timm>=1.0",
    "huggingface-hub<1.23",
]

[dependency-groups]
dev = ["pytest>=8.0"]

# RTX 5090 is Blackwell (sm_120) -> cu128 wheels; explicit index, identical to factory/serve.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["distill"]
