[project]
name = "ayaka-serve"
version = "0.1.0"
description = "Open-vocabulary (LLMDet) + RT-DETRv2 inference server for the ayaka-hand studio demo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "onnxruntime-directml>=1.20; sys_platform == 'win32'",
    "onnxruntime>=1.20; sys_platform != 'win32'",
    "pillow>=11.0",
    "numpy<2.3",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "torch>=2.7",
    "transformers>=4.55",
    "timm>=1.0",
]

# RTX 5090 is Blackwell (sm_120) → needs cu128 torch wheels. This index is
# explicit=true, so it is used ONLY for packages pinned to it below; every
# other dependency still resolves from PyPI.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Pin torch to the cu128 index on the GPU hosts (win/linux) only. macOS (dev)
# has no cu128 wheel and falls back to the default PyPI CPU wheel — this keeps
# the cross-platform lock resolvable on the Mac.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
